@@ -856,16 +856,6 @@ class my_install(install):
         This is only run for local installs. Wheel-based installs won't run this code.
         """
         install.run(self)
-        # If self.root has a value, it means we are being "installed" into some other
-        # directory than Python itself - in which case we must *not* run our installer.
-        # bdist_wininst used to trigger this by using a temp directory.
-        # Is this still a concern ?
-        if self.root:
-            print(
-                "Not executing post install script when "
-                + f"not installing in Python itself (self.root={self.root})"
-            )
-            return
         self.execute(self._postinstall, (), msg="Executing post install script...")
 
     def _postinstall(self):
@@ -874,17 +864,16 @@ class my_install(install):
             raise RuntimeError(f"Can't find '{filename}'")
         # As of setuptools>=74.0.0, we no longer need to
         # be concerned about distutils calling win32api
-        subprocess.Popen(
-            [
+        subprocess.check_call(
+            (
                 sys.executable,
                 filename,
                 "-install",
                 "-destination",
                 self.install_lib,
-                "-quiet",
                 "-wait",
                 str(os.getpid()),
-            ]
+            )
         )
 
 
