@@ -14,6 +14,7 @@ https://mhammond.github.io/pywin32_installers.html.
 Coming in build 309, as yet unreleased
 --------------------------------------
 
+* Added support for relative path for `pywin32_postinstall`'s `-destination` argument (#2447, @Avasam)
 * Restored axdebug builds on Python 3.10 (#2416, @Avasam)
 * Pythonwin: Bumped Scintilla from 1.77 to 4.4.6. The full changelog can be found here: https://www.scintilla.org/ScintillaHistory.html
 * Fixed `ddeclient` and `ddeserver` demos import error (#2290, @Avasam)
